# -1_ft_printf

./: ._Makefile  .gitignore  CMakeLists.txt  Makefile  Makefile1  README.md  main.c  printf_main.c
inc/: ft_printf.h
libft/: ft_strlen.c
src/: ft_basification.c  ft_capitalize.c  ft_isconversion_char.c  ft_isflag.c  ft_islength.c  ft_itoa_positive.c  ft_itoa_ulong.c  ft_print.c  ft_printf.c  ft_putnwstr.c  ft_putwchar.c  ft_putwchar_fd.c  ft_putwstr.c  ft_strreverse.c  ft_wstrlen.c  get_number_by_len.c  get_number_by_len_unsigned.c  handle_bases.c  handle_char.c  handle_char_w.c  handle_hex_big.c  handle_hex_small.c  handle_int.c  handle_int_long.c  handle_numbers.c  handle_numbers_sup.c  handle_numbers_sup2.c  handle_octal_ulong.c  handle_percent.c  handle_pointer.c  handle_string.c  handle_ulong.c  init_printf.c  main.c  parse_flags.c  parse_length.c  parse_precision.c  parse_width.c  print_prefix_pad.c  printf_main.c  (+1 more)
src/ft/: ._ft_putnwstr.c  ft_basification.c  ft_capitalize.c  ft_isconversion_char.c  ft_isdigit.c  ft_isflag.c  ft_islength.c  ft_itoa_positive.c  ft_putnwstr.c  ft_putwchar.c  ft_putwchar_fd.c  ft_putwstr.c  ft_strnlen.c  ft_strreverse.c  ft_wstrlen.c
src/general/: init_printf.c
src/handlers/: handle_bases.c  handle_bases_sup.c  handle_char.c  handle_char_w.c  handle_hex_big.c  handle_hex_small.c  handle_int.c  handle_int_long.c  handle_numbers.c  handle_numbers_sup.c  handle_numbers_sup2.c  handle_octal_uint.c  handle_octal_ulong.c  handle_percent.c  handle_pointer.c  handle_string.c  handle_string_w.c  handle_uint.c  handle_ulong.c
(+23 files in other folders)
